--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
