--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
   url_launcher: ^5.7.10
+  http: ^0.12.2
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
