--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  google_fonts: ^1.1.1
+  cupertino_icons: ^1.0.3
+  google_fonts: ^2.1.0
   url_launcher: ^5.7.10
-  http: ^0.12.2
-  provider: ^4.3.2+3
+  http: ^0.13.3
+  provider: ^5.0.0
+  equatable: ^2.0.2
 
 dev_dependencies:
   flutter_test:
